Added swagger docs, added player tests
